adding css for step in profile page

--- a/bookmyhall-frontend/src/app/bookmyhall-profile/bookmyhall-profile.component.css
+++ b/bookmyhall-frontend/src/app/bookmyhall-profile/bookmyhall-profile.component.css
@@ -83,188 +83,76 @@ div.content {
   height: auto;
 }
 
-@media screen and (max-width: 700px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .sidebar a {float: left;}
-  div.content {margin-left: 0;}
+
+#regForm {
+  background-color: #ffffff;
+  margin: 100px auto;
+  font-family: Raleway;
+  padding: 40px;
+  width: 70%;
+  min-width: 300px;
 }
 
-@media screen and (max-width: 400px) {
-  .sidebar a {
-    text-align: center;
-    float: none;
-  }
-}
-.sw-theme-arrows {
-  border-radius: 5px;
-  border: 1px solid #ddd;
-  padding-bottom: 20px;
-}
-.heading-in-wizaed{
-  text-align:center !important;
-  text-transform: uppercase;
-}
-.sw-theme-arrows > .sw-container {
-  min-height: 200px;
+h1 {
+  text-align: center;  
 }
 
-.sw-theme-arrows .step-content {
-  padding: 0 10px;
-  border: 0px solid #D4D4D4;
-  background-color: #FFF;
-  text-align: left;
-}
-
-.sw-theme-arrows .sw-toolbar {
+input {
   padding: 10px;
-  margin-bottom: 0 !important;
+  width: 100%;
+  font-size: 17px;
+  font-family: Raleway;
+  border: 1px solid #aaaaaa;
 }
 
-
-.sw-theme-arrows > ul.step-anchor {
-  border: 0;
-  border-bottom: 1px solid #ddd;
-  padding: 0px;
-  background: #f5f5f5;
-  border-radius: 0;
-  border-top-right-radius: 5px;
-  list-style: none;
-  overflow: hidden;
+/* Mark input boxes that gets an error on validation: */
+input.invalid {
+  background-color: #ffdddd;
 }
 
-.sw-theme-arrows > ul.step-anchor li+li:before {
-  padding: 0;
+/* Hide all steps by default: */
+.tab {
+  display: none;
 }
 
-.sw-theme-arrows > ul.step-anchor > li > a, .sw-theme-arrows > ul.step-anchor > li > a:hover {
-  color: #bbb;
-  text-decoration: none;
-  padding: 10px 0 10px 45px;
-  position: relative;
-  display: block;
-  border: 0 !important;
-  border-radius: 0;
-  outline-style: none;
-  background: #f5f5f5;
+button {
+  background-color: #4CAF50;
+  color: #ffffff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 17px;
+  font-family: Raleway;
+  cursor: pointer;
 }
 
-.sw-theme-arrows > ul.step-anchor > li > a:after {
-  content: " ";
-  display: block;
-  width: 0;
-  height: 0;
-  border-top: 50px solid transparent;
-  border-bottom: 50px solid transparent;
-  border-left: 30px solid #f5f5f5;
-  position: absolute;
-  top: 50%;
-  margin-top: -50px;
-  left: 100%;
-  z-index: 2;
+button:hover {
+  opacity: 0.8;
 }
 
-.sw-theme-arrows > ul.step-anchor > li > a:before {
-  content: " ";
-  display: block;
-  width: 0;
-  height: 0;
-  border-top: 50px solid transparent;
-         /* Go big on the size, and let overflow hide */
-  border-bottom: 50px solid transparent;
-  border-left: 30px solid #ddd;
-  position: absolute;
-  top: 50%;
-  margin-top: -50px;
-  margin-left: 1px;
-  left: 100%;
-  z-index: 1;
+#prevBtn {
+  background-color: #bbbbbb;
 }
 
-.sw-theme-arrows > ul.step-anchor > li:first-child > a {
-  padding-left: 15px;
+/* Make circles that indicate the steps of the form: */
+.step {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbbbbb;
+  border: none;  
+  border-radius: 50%;
+  display: inline-block;
+  opacity: 0.5;
 }
 
-.sw-theme-arrows > ul.step-anchor > li > a:hover {
-  color: #bbb;
-  text-decoration: none;
-  outline-style: none;
-  background: #f5f5f5;
-  border-color: #f5f5f5;
+.step.active {
+  opacity: 1;
 }
 
-.sw-theme-arrows > ul.step-anchor > li > a:hover:after {
-  border-left-color: #f5f5f5;
+/* Mark the steps that are finished and valid: */
+.step.finish {
+  background-color: #4CAF50;
 }
-
-.sw-theme-arrows > ul.step-anchor > li.clickable > a:hover {
-  color: #4285F4 !important;
-  background: #46b8da !important;
-}
-
-.sw-theme-arrows > ul.step-anchor > li.active > a {
-  border-color: #007bff !important;
-  color: #fff !important;
-  background: #007bff !important;
-}
-
-.sw-theme-arrows > ul.step-anchor > li.active > a:after {
-  border-left: 30px solid #007bff !important;
-}
-
-.sw-theme-arrows > ul.step-anchor > li.done > a {
-  border-color: #a0a6ab !important;
-  color: #fff !important;
-  background: #a0a6ab !important;
-}
-
-.sw-theme-arrows > ul.step-anchor > li.done > a:after {
-  border-left: 30px solid #a0a6ab;
-/* c3e6cb */;
-}
-
-.sw-theme-arrows > ul.step-anchor > li.danger > a {
-  border-color: #d9534f !important;
-  color: #fff !important;
-  background: #d9534f !important;
-}
-
-.sw-theme-arrows > ul.step-anchor > li.danger > a:after {
-  border-left: 30px solid #d9534f !important;
-}
-
-.sw-theme-arrows > ul.step-anchor > li.disabled > a, .sw-theme-arrows > ul.step-anchor > li.disabled > a:hover {
-  color: #eee !important;
-}
-
-/* Responsive CSS */
-@media screen and (max-width: 768px) {
-  .sw-theme-arrows > ul.step-anchor {
-      border: 0;
-      background: #ddd !important;
-  }
-
-  .sw-theme-arrows > .nav-tabs > li {
-      float: none !important;
-      margin-bottom: 0;
-  }
-
-  .sw-theme-arrows > ul.step-anchor > li > a, .sw-theme-arrows > ul.step-anchor > li > a:hover {
-      padding-left: 15px;
-      margin-right: 0;
-      margin-bottom: 1px;
-  }
-
-  .sw-theme-arrows > ul.step-anchor > li > a:after, .sw-theme-arrows > ul.step-anchor > li > a:before {
-      display: none;
-  }
-}
-
-/* Loader Custom Style */
-.sw-theme-arrows::before {
-  border: 10px solid #f3f3f3;
-  border-top: 10px solid #5cb85c;
+.tab{
+text-align:center;
 }
