changed path in login and reg of service calling

--- a/bookmyhall-frontend/src/app/bookmyhall-profile/bookmyhall-profile.component.html
+++ b/bookmyhall-frontend/src/app/bookmyhall-profile/bookmyhall-profile.component.html
@@ -1,5 +1,5 @@
 
-<form id="regForm" action="/action_page.php">
+<form id="regForm" (ngSubmit)="onSubmit()">
     <h1>Hall booking</h1>
     <!-- One "tab" for each step in the form: -->
     <div class="tab">Select Hall
