--- a/bookmyhall-frontend/src/app/bookmyhall-profile/bookmyhall-profile.component.css
+++ b/bookmyhall-frontend/src/app/bookmyhall-profile/bookmyhall-profile.component.css
@@ -132,3 +132,42 @@ button:hover {
 #prevBtn {
   background-color: #bbbbbb;
 }
+.container {
+  max-width: 80%;
+  border: 1px solid;
+  margin: auto
+}
+.main {
+  padding: 95px 0;
+}.container {
+    position: relative;
+    margin: 0 auto;
+    left:100px;
+    background: #fff;
+    box-shadow: 0px 5px 9.5px 0.5px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0px 5px 9.5px 0.5px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0px 5px 9.5px 0.5px rgba(0, 0, 0, 0.1);
+    -o-box-shadow: 0px 5px 9.5px 0.5px rgba(0, 0, 0, 0.1);
+    -ms-box-shadow: 0px 5px 9.5px 0.5px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+.form-heading{
+  text-align: center !important;
+  padding: 30px !important;
+  text-transform: uppercase;
+}
+.submit-btn{
+  background: #007bff;
+  padding: 12px 25px;
+  font-size: 19px;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-weight: 400;
+  line-height: 1.5;
+  color: white !important;
+}
+.text-center{
+  text-align:center
+}
