--- a/bookmyhall-frontend/src/app/bookmyhall-profile/bookmyhall-profile.component.html
+++ b/bookmyhall-frontend/src/app/bookmyhall-profile/bookmyhall-profile.component.html
@@ -1,7 +1,11 @@
-<div class="sidebar">
+<div class="sidebar" id="slideid">
+    <span (click)="closemenu()" class="closeicon"><i class="fa fa-times" aria-hidden="true"></i></span>
     <a class="active" href="#home"><i class="fa fa-fw fa-home"></i>Home</a>
     <a href="#details"><i class="fa fa-fw fa-list"></i>Booking Details</a> 
     <a routerLinkActive="active" (click)="logout()" ><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a>
+  </div>
+  <div class="row mobile-menu">
+        <span (click)="slidemenu()"><i class="fa fa-bars"  style="font-size:24px"></i></span>
   </div>
   <div class="main">
 
