--- a/bookmyhall-frontend/src/app/bookmyhall-profile/bookmyhall-profile.component.css
+++ b/bookmyhall-frontend/src/app/bookmyhall-profile/bookmyhall-profile.component.css
@@ -2,6 +2,47 @@ body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
 }
+#snackbar {
+  visibility: hidden;
+  min-width: 250px;
+  margin-left: -125px;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  border-radius: 2px;
+  padding: 16px;
+  position: fixed;
+  z-index: 1;
+  left: 50%;
+  bottom: 30px;
+  font-size: 17px;
+}
+
+#snackbar.show {
+  visibility: visible;
+  -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+@-webkit-keyframes fadein {
+  from {bottom: 0; opacity: 0;} 
+  to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+  from {bottom: 0; opacity: 0;}
+  to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+  from {bottom: 30px; opacity: 1;} 
+  to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+  from {bottom: 30px; opacity: 1;}
+  to {bottom: 0; opacity: 0;}
+}
 .btn-secondary {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
@@ -170,4 +211,52 @@ button:hover {
 }
 .text-center{
   text-align:center
+}
+.mobile-menu{
+  display:none;
+}
+.closeicon{
+  display: none
+}
+@media only screen and (max-width: 760px) {
+  .container {
+    position: relative;
+    margin: 0 auto;
+    left:0px;
+  }
+  .main {
+    padding: 35px 0;
+  }
+  .sidebar{
+    display:none;
+    z-index:1;
+  }
+  .mobile-menu{
+    display:block;
+    background:#007bff !important;
+    height: 45px;
+  }
+  .mobile-menu span{
+    color:white;
+    float: right;
+    width: 55px;
+    margin: 8px 0;
+    
+  }
+  .closeicon{
+    color: white;
+    float: right;
+    width: 35px;
+    margin: 0px 0;
+    border: 1px solid white;
+    height: 38px;
+    padding: 5px 16px 0 10px;
+    display: block;
+}
+.form-heading {
+  text-align: center !important;
+  padding: 15px !important;
+  text-transform: uppercase;
+  font-size: 29px;
+}
 }
