--- a/bookmyhall-frontend/src/app/bookmyhall-profile/bookmyhall-profile.component.html
+++ b/bookmyhall-frontend/src/app/bookmyhall-profile/bookmyhall-profile.component.html
@@ -1,20 +1,21 @@
-<div class="sidebar">
+<div class="sidebar" id="slideid">
+    <span (click)="closemenu()" class="closeicon"><i class="fa fa-times" aria-hidden="true"></i></span>
     <a class="active" href="#home"><i class="fa fa-fw fa-home"></i>Home</a>
     <a href="#details"><i class="fa fa-fw fa-list"></i>Booking Details</a> 
     <a routerLinkActive="active" (click)="logout()" ><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a>
   </div>
+  <div class="row mobile-menu">
+        <span (click)="slidemenu()"><i class="fa fa-bars"  style="font-size:24px"></i></span>
+  </div>
   <div class="main">
 
     <div class="container">
-            Welcome {{username}}!
         <h2 class="form-heading">Hall booking</h2>
         <br>
-        <form [formGroup]="assetsForm">
-        <!-- <input type="text" class="form-control"  name="user_id" value="{{username}}" formControlName="user_id"> -->
-        <!-- <input type="text" class="form-control"  name="status" value="0" formControlName="status"> -->
+        <form >
                 <div class="row p-b-15" >
                         <div class="col-sm-12 col-md-6">
-                                <select class="city form-control " id="city" data-ng-model="city" name="city" tabindex="1" required="" formControlName="city">
+                                <select class="country form-control " id="country" data-ng-model="country" name="country" tabindex="1" required="">
                                         <option value="" selected="">Select your City </option>
                                         <option value="option">option1</option>
                                         <option value="option2">option2</option>
@@ -23,7 +24,7 @@
                                 
                         </div>
                         <div class="col-sm-12 col-md-6">
-                            <select class="hall_name form-control " id="hall_name" data-ng-model="hall_name" name="hall_name" tabindex="1" required="" formControlName="hall_name">
+                            <select class="country form-control " id="country" data-ng-model="country" name="country" tabindex="1" required="">
                                         <option value="" selected="">Select Halls </option>
                                         <option value="option">option1</option>
                                         <option value="option2">option2</option>
@@ -36,7 +37,7 @@
                 <div class="col-sm-12 col-md-6">
                         <div class="form-holder">
                                 <label for="gender"> Name</label>
-                                <input type="text" placeholder="Enter Name" class="form-control" id="first_name" name="first_name" formControlName="name">
+                                <input type="text" placeholder="Enter Name" class="form-control" id="first_name" name="first_name">
                         </div>
                 </div>
                 <div class="col-sm-12 col-md-6">
@@ -44,9 +45,9 @@
                                 <div id="radio">
                                     <label for="gender">Gender:</label>
                                     <div class="form-radio-item m-t-5">
-                                            <input type="radio" name="gender" value="male" id="male" checked="checked" class="valid" formControlName="gender">
+                                            <input type="radio" name="gender" value="male" id="male" checked="checked" class="valid">
                                             <label for="male" class="gender-label" style="border-right: 1px solid #ddd;">Male</label>
-                                            <input type="radio" name="gender" value="female" id="female" class="valid" aria-invalid="false" formControlName="gender">
+                                            <input type="radio" name="gender" value="female" id="female" class="valid" aria-invalid="false">
                                             <label for="female" class="gender-label">Female</label>
                                          </div>
                                 </div>
@@ -56,14 +57,14 @@
             <div class="row p-b-15">
                 <div class="col-sm-12 col-md-6">
                         <div class="form-holder">
-                                <label for="phone_no">Phone Number</label>
-                                <input type="text" placeholder="+1 777-888-8888" class="form-control" id="phone_no" name="phone_no" formControlName="phone_no">
+                                <label for="phone">Phone Number</label>
+                                <input type="text" placeholder="+1 777-888-8888" class="form-control" id="phone" name="phone">
                             </div>
                 </div>
                 <div class="col-sm-12 col-md-6">
                         <div class="form-holder">
                         <label for="phone">Aadhaar No</label>
-                        <input type="text" placeholder="Aadhaar No" class="form-control" name="id_proof" formControlName="id_proof">
+                        <input type="text" placeholder="Aadhaar No" class="form-control">
                         </div>
                     </div>
             </div>
@@ -71,24 +72,24 @@
                 <div class="col-sm-12 col-md-6">
                     <div class="form-holder">
                             <label for="phone">Address</label>
-                            <input type="text" placeholder="622 Dixie Path, South Tobinchester, UT 98336" class="form-control" id="address" name="address" formControlName="address">
+                            <input type="text" placeholder="622 Dixie Path, South Tobinchester, UT 98336" class="form-control" id="address" name="address">
                          
                         </div>
                         
                 </div>
                 <div class="col-sm-12 col-md-6">
                         <div class="form-holder">
-                                <label for="zipcode">Zip Code</label>
-                                <input type="text" class="form-control" id="zipcode" name="zipcode" formControlName="zipcode">
+                                <label for="code">Zip Code</label>
+                                <input type="text" class="form-control" id="code" name="code">
                             </div>
                 </div>
             </div>
             <div class="col-sm-12 p-b-15 text-center" style="padding:25px;">
-                <a class="submit-btn" (click)="asset()">Submit</a>
+                <a class="submit-btn">Submit</a>
+               
             </div>
         </form>
     </div>
-    <div style="text-align: center;">                
-        {{successMessage}}
-    </div>
+
 </div>
+
