--- a/bookmyhall-frontend/src/app/bookmyhall-profile/bookmyhall-profile.component.html
+++ b/bookmyhall-frontend/src/app/bookmyhall-profile/bookmyhall-profile.component.html
@@ -1,6 +1,7 @@
 <div class="sidebar">
     <a class="active" href="#home"><i class="fa fa-fw fa-home"></i>Home</a>
     <a href="#details"><i class="fa fa-fw fa-list"></i>Booking Details</a> 
+    <a routerLinkActive="active" [routerLink]="['/city']"><i class="fa fa-fw fa-list"></i>Add City</a> 
     <a routerLinkActive="active" (click)="logout()" ><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a>
   </div>
   <div class="main">
