--- a/bookmyhall-frontend/src/app/city/city.component.html
+++ b/bookmyhall-frontend/src/app/city/city.component.html
@@ -1,70 +1,3 @@
-<div class="row">
-  <div class="col-md-2">
-    <div class="sidebar">
-      <a  href="#home"><i class="fa fa-fw fa-home"></i>Home</a>
-      <a href="#details"><i class="fa fa-fw fa-list"></i>Booking Details</a> 
-      <a routerLinkActive="active" [routerLink]="['/city']"><i class="fa fa-fw fa-list"></i>Add City</a> 
-      <a routerLinkActive="active" (click)="logout()" ><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a>
-    </div>
-  </div>
-  <div class="col-md-10">
-    <br>
-      <nav aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Library</li>
-          </ol>
-        </nav>
-    <div class="row">
-        <div class="col-md-5">
-            <div class="card">
-              <div class="card-body">
-                <form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
-                  <div class="input-group mb-3">      
-                    <input type="text" class="form-control" name="city_name" ngModel placeholder="City" #city_name="ngModel">
-                  </div>
-                  <input class="btn btn-success" type="submit" value="Submit">
-                </form>
-              </div>
-            </div>
-            <div style="text-align: center;">                
-                {{successMessage}}
-            </div>
-        </div>        
-        <div class="col-md-6">
-            <table class="table table-hover">
-                <thead>
-                  <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
-                  </tr>
-                </tbody>
-              </table>
-        </div>
-    </div>
-  </div>  
-
-
-</div>
-
+<p>
+  city works!
+</p>
