--- a/bookmyhall-frontend/src/app/city/city.component.html
+++ b/bookmyhall-frontend/src/app/city/city.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-md-2">
     <div class="sidebar">
-      <a  href="#home"><i class="fa fa-fw fa-home"></i>Home</a>
-      <a href="#details"><i class="fa fa-fw fa-list"></i>Booking Details</a> 
+      <a routerLinkActive="active" [routerLink]="['/profile']"><i class="fa fa-fw fa-home"></i>Home</a>
+      <a routerLinkActive="active" [routerLink]="['/booking-details']"><i class="fa fa-fw fa-list"></i>Booking Details</a> 
       <a routerLinkActive="active" [routerLink]="['/city']"><i class="fa fa-fw fa-list"></i>Add City</a> 
       <a routerLinkActive="active" (click)="logout()" ><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a>
     </div>
