added halls details and hide header and footer for halls page

--- a/bookmyhall-frontend/src/app/bookmyhall-booking-details/bookmyhall-booking-details.component.html
+++ b/bookmyhall-frontend/src/app/bookmyhall-booking-details/bookmyhall-booking-details.component.html
@@ -4,6 +4,7 @@
       <a routerLinkActive="active" [routerLink]="['/profile']"><i class="fa fa-fw fa-home"></i>Home</a>
       <a routerLinkActive="active" [routerLink]="['/booking-details']"><i class="fa fa-fw fa-list"></i>Booking Details</a> 
       <a routerLinkActive="active" [routerLink]="['/city']"><i class="fa fa-fw fa-list"></i>Add City</a> 
+      <a routerLinkActive="active" [routerLink]="['/halls-list']"><i class="fa fa-fw fa-list"></i>Add Halls</a>
       <a routerLinkActive="active" (click)="logout()" ><i class="fa fa-sign-out" aria-hidden="true"></i>Logout</a>
     </div>
   </div>
